Fix: change accent bg color for oled theme to be brighter

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -183,7 +183,7 @@ body {
 	--theme-divider: hsla(var(--color-gray-30), 1);
 	--theme-text: white;
 	--theme-text-light: hsla(var(--color-gray-80), 1);
-	--theme-bg-accent: #121212;
+	--theme-bg-accent: #242424;
 
 	/* @@@: not used anywhere */
 	--theme-text-lighter: hsla(var(--color-gray-40), 1);
@@ -210,11 +210,11 @@ body {
 	--docsearch-modal-shadow: inset 0 0 8px #000;
 
 	/* landing page */
-	--docs-btn-bg: #121212;
+	--docs-btn-bg: var(--theme-bg-accent);
 	--docs-btn-text: white;
 	--repo-btn-text: white;
 	--circle-gradient-color: transparent;
-	--comparison-card-bg: #121212;
+	--comparison-card-bg: var(--theme-bg-accent);
 }
 
 ::selection {
