Fix: update suggested links heading text

--- a/src/components/RecommendedSections/RecommendedSections.astro
+++ b/src/components/RecommendedSections/RecommendedSections.astro
@@ -67,7 +67,7 @@ const sidebarLinks = getThreeRandomLinks()
 </style>
 
 <div class='wrapper'>
-	<h2>Random articles</h2>
+	<h2>Links you might like</h2>
 	<ul class='list'>
 		{
 			sidebarLinks.map(({ link, text }) => (
