Feat: update color for summary toggle button

--- a/src/components/RightSidebar/TableOfContents.module.scss
+++ b/src/components/RightSidebar/TableOfContents.module.scss
@@ -1,4 +1,5 @@
 .toggle {
-	background-color: var(--bewebdev-pink-saturated);
+	background-color: var(--docs-btn-bg);
+	color: var(--docs-btn-text);
 	padding: 0.7rem 2rem;
 }
