Feat: update star on github button in the docs
to be more eye catching

--- a/src/components/GitHubStarLink/GitHubStarLink.astro
+++ b/src/components/GitHubStarLink/GitHubStarLink.astro
@@ -1,10 +1,17 @@
-<!-- Place this tag where you want the button to render. -->
-<a
-	class='github-button'
-	href='https://github.com/NowYouKnowProgramming/webdev-learning-materials'
-	data-icon='octicon-star'
-	aria-label='Star project on github button'>Star this project</a
->
+<style lang='scss'>
+	a.star {
+		width: fit-content;
+		padding: 0.5rem 1rem;
+		border-radius: 4rem;
+		text-decoration: none;
+		text-align: center;
+		background-color: var(--bewebdev-purple-saturated);
+		font-weight: bold;
+	}
+</style>
 
-<!-- Place this tag in your head or just before your close body tag. -->
-<script is async defer src='https://buttons.github.io/buttons.js'></script>
+<a
+	class='star'
+	href='https://github.com/NowYouKnowProgramming/webdev-learning-materials'
+	>Star on GitHub</a
+>
