Feat: enlarge links on landing page

--- a/src/components/LandingPage/WelcomeSection/MainLinks.astro
+++ b/src/components/LandingPage/WelcomeSection/MainLinks.astro
@@ -25,6 +25,7 @@ import DocsBtn from '../DocsBtn.astro'
 		align-items: center;
 		gap: 1rem;
 		flex-wrap: wrap;
+		width: 100%;
 	}
 
 	.links a {
