--- a/src/components/utility/CopyCodeToClipboard/CopyCodeToClipboard.astro
+++ b/src/components/utility/CopyCodeToClipboard/CopyCodeToClipboard.astro
@@ -3,27 +3,38 @@
 		display: flex;
 		justify-content: flex-end;
 		right: 16px;
+		position: sticky;
+		left: 0;
+		top: 0;
 	}
 
 	.copy-button {
-		transition: background-color 0.2s, color 0.2s;
+		transition: background-color 0.5s, color 0.5s;
 		cursor: pointer;
 		padding: 0.8rem 1.8rem;
 		font-weight: bold;
+		width: 120px;
+		text-align: center;
+		display: block;
 	}
 
 	.success {
+		transition: background-color 0.2s, color 0.2s;
 		background-color: var(--theme-text-accent);
 		color: var(--theme-bg);
-		animation: button-success 0.2s ease-in-out;
+		animation: button-success 0.5s ease-in-out;
 	}
 
 	@keyframes button-success {
 		0% {
 			transform: scale(1);
 		}
-		20% {
+		10% {
+			box-shadow: 0 0 12px var(--bewebdev-pink-saturated);
 			transform: scale(1.1);
+		}
+		80% {
+			box-shadow: 0 0 20px transparent;
 		}
 		100% {
 			transform: scale(1);
