--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -17,7 +17,7 @@ const currentPageMatch = currentPage.endsWith('/')
 			Object.entries(SIDEBAR).map(([header, children]) => (
 				<li>
 					<div class='nav-group'>
-						<h2>{header}</h2>
+						<h2 class='title'>{header}</h2>
 						<ul>
 							{children.map((child) => {
 								const url = Astro.site?.pathname + child.link
@@ -52,6 +52,10 @@ const currentPageMatch = currentPage.endsWith('/')
 </script>
 
 <style>
+	.title {
+		text-align: center;
+	}
+
 	nav {
 		width: 100%;
 		margin-right: 1rem;
@@ -68,7 +72,6 @@ const currentPageMatch = currentPage.endsWith('/')
 	.nav-groups > li + li {
 		margin-top: 2rem;
 	}
-
 	.nav-groups > :first-child {
 		padding-top: var(--doc-padding);
 	}
@@ -88,15 +91,17 @@ const currentPageMatch = currentPage.endsWith('/')
 
 	.nav-link a {
 		font-size: 1rem;
-		margin: 1px;
-		padding: 0.5rem 1rem;
+		margin-bottom: 10px;
+		padding: 0.7rem 1rem;
 		font: inherit;
 		color: inherit;
 		text-decoration: none;
 		display: block;
 		transition: 0.3s;
-		border-radius: 5px;
+		border-radius: 3rem;
 		width: calc(100% - 10px);
+		border: 1px solid var(--theme-code-bg);
+		text-align: center;
 	}
 
 	.nav-link a:hover,
@@ -109,6 +114,13 @@ const currentPageMatch = currentPage.endsWith('/')
 		color: var(--theme-text-accent);
 		background-color: var(--theme-bg-accent);
 		font-weight: 600;
+	}
+
+	@media (max-width: 450px) {
+		.nav-link a {
+			border-color: var(--theme-text);
+			padding: 1.2rem 0.5rem;
+		}
 	}
 
 	@media (min-width: 50em) {
