Feat: improve navbar height and increase size of side menu toggle in docs

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -68,6 +68,8 @@ const algoliaIsSetUp = indexName && appId && apiKey
 		overflow: hidden;
 		position: sticky;
 		top: 0;
+		height: fit-content;
+		padding: 12px 0;
 	}
 
 	.logo {
@@ -117,6 +119,10 @@ const algoliaIsSetUp = indexName && appId && apiKey
 		width: 100%;
 		max-width: var(--safe-max-width);
 		padding: 0 1rem;
+	}
+
+	.menu-toggle {
+		scale: 1.8;
 	}
 
 	@media (min-width: 50em) {
