--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -10,7 +10,8 @@ const { frontmatter, canonicalUrl } = Astro.props as Props
 const formattedContentTitle = `${frontmatter.title} 🧩 ${SITE.title}`
 const imageAlt = frontmatter.image?.alt ?? OPEN_GRAPH.image.alt
 
-const META_IMG_URL = 'https://bewebdev.tech/metaimage.webp'
+const META_IMG_URL =
+	Astro.url.origin + (frontmatter.image?.src ?? '/metaimage.webp')
 
 const DESCRIPTION = frontmatter.description ?? SITE.description
 ---
