--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -63,7 +63,7 @@
 	font-display: swap;
 }
 
-html{
+html {
 	scroll-behavior: smooth;
 }
 
@@ -137,6 +137,29 @@ h4 {
 
 h5 {
 	font-size: 1rem;
+}
+
+@media (max-width: 1440px) {
+	h1 {
+		font-size: 2.2rem;
+		font-weight: 800;
+	}
+
+	h2 {
+		font-size: 1.8rem;
+	}
+
+	h3 {
+		font-size: 1.4rem;
+	}
+
+	h4 {
+		font-size: 1.2rem;
+	}
+
+	h5 {
+		font-size: 1.1rem;
+	}
 }
 
 @media (max-width: 800px) {
