Adjust welcome section height to be properly sized

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -127,8 +127,8 @@ const algoliaIsSetUp = indexName && appId && apiKey
 
 	@media (min-width: 50em) {
 		header {
-			position: static;
 			padding: 2rem 0rem;
+			margin-bottom: -100px;
 		}
 
 		.logo {
