--- a/src/components/LandingPage/WelcomeSection/WelcomeSection.astro
+++ b/src/components/LandingPage/WelcomeSection/WelcomeSection.astro
@@ -3,10 +3,10 @@ import MainLinks from './MainLinks.astro'
 ---
 
 <div class='welcome'>
-	<div class='grid-container'>
-		<div class='grid'></div>
-	</div>
 	<div class='content'>
+		<div class='grid-container'>
+			<div class='grid'></div>
+		</div>
 		<h2 class='title'>
 			The <span class='glow'>best way</span> to learn web development
 		</h2>
@@ -37,12 +37,13 @@ import MainLinks from './MainLinks.astro'
 		flex: 1;
 
 		position: relative;
-		overflow-x: hidden;
-		min-height: 91vh;
-		min-height: 100svh;
+		overflow: hidden;
+		min-height: 100vh;
+		max-height: 100svh;
 	}
 
 	.content {
+		position: relative;
 		z-index: var(--z-elevated);
 		width: min(500px, 95vw);
 		text-align: center;
@@ -64,23 +65,24 @@ import MainLinks from './MainLinks.astro'
 
 	.grid-container {
 		position: absolute;
-		left: 30%;
-		top: -30%;
-		width: 40%;
-		height: auto;
-		margin-left: auto;
-		margin-right: auto;
-		transform: perspective(750px) rotateX(70deg);
-	}
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		z-index: -1;
 
-	.grid {
-		opacity: 0.3;
+		transform: perspective(350px) rotateX(70deg);
 		mask-image: linear-gradient(
 			transparent,
 			rgba(0, 0, 0, 1) 20%,
 			rgba(0, 0, 0, 1) 80%,
 			transparent
 		);
+	}
+
+	.grid {
+		opacity: 0.3;
+
 		width: 100%;
 		height: 800px;
 		background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 100 100"%3E%3Cg fill-rule="evenodd"%3E%3Cg fill="violet" fill-opacity="0.9"%3E%3Cpath opacity=".9" d="M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z"/%3E%3Cpath d="M6 5V0H5v5H0v1h5v94h1V6h94V5H6z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
