--- a/src/components/LandingPage/LandingSEO.astro
+++ b/src/components/LandingPage/LandingSEO.astro
@@ -1,5 +1,5 @@
 ---
-const META_IMG_URL = 'https://bewebdev.tech/metaimage.webp'
+const META_IMG_URL = 'https://bewebdev.tech/metaimage.png'
 const URL = 'https://bewebdev.tech/'
 const DESCRIPTION =
 	'We’ve done the work for you. We’ve collected the best resources and put them in one place.'
