--- a/src/components/LandingPage/DocsBtn.astro
+++ b/src/components/LandingPage/DocsBtn.astro
@@ -5,11 +5,12 @@ type Props = {
 	classes?: string
 	href: string
 	title: string
+	glow?: boolean
 }
 
-const { text, href, isExternal, classes, title }: Props = Astro.props
+const { text, href, isExternal, classes, title, glow }: Props = Astro.props
 
-const css = `docs-btn ${classes ? classes : ''}`
+const css = `docs-btn ${glow ? 'glow' : ''} ${classes ? classes : ''}`
 ---
 
 <a
@@ -18,10 +19,20 @@ const css = `docs-btn ${classes ? classes : ''}`
 	href={href}
 	rel={isExternal ? 'noopener noreferrer' : ''}
 	target={isExternal ? '_blank' : ''}
-	><span>{text}</span>
+	><span class='inner-text'>{text}</span>
 </a>
 
 <style lang='scss'>
+	.inner-text {
+		width: 100%;
+		height: 100%;
+		border: 2px solid var(--bewebdev-pink);
+		padding: 0.3rem 1.2rem;
+		display: block;
+		border-radius: 50px;
+		transition: scale 0.3s cubic-bezier(0.17, 0.67, 0.11, 0.98);
+	}
+
 	.docs-btn,
 	.docs-btn:active,
 	.docs-btn:hover,
@@ -30,57 +41,66 @@ const css = `docs-btn ${classes ? classes : ''}`
 	}
 
 	.docs-btn {
+		display: block;
+		padding: 0.3rem;
 		font-size: 1.3rem;
-		background-color: var(--docs-btn-bg);
-		color: var(--docs-btn-text);
+		color: var(--font-body);
 		font-weight: bold;
-		padding: 1rem 1.2rem;
-		border-radius: 8px;
+
+		transition: text-shadow 0.1s;
+
+		background-image: linear-gradient(
+			to bottom,
+			transparent,
+			var(--bewebdev-pink-saturated)
+		);
+
+		:not(&.repo) {
+		}
+
+		&.glow {
+			.inner-text {
+				box-shadow: 0 0 5px var(--bewebdev-pink-saturated),
+					inset 0 0 5px var(--bewebdev-pink-saturated),
+					0 0 25px var(--bewebdev-pink-saturated);
+			}
+
+			&:hover,
+			&:focus {
+				--main-glow: #a66fff;
+				--secondary-glow: #8e62d5;
+				text-shadow: 0 0 7px var(--main-glow), 0 0 10px var(--main-glow),
+					0 0 21px var(--main-glow), 0 0 42px var(--secondary-glow),
+					0 0 82px var(--secondary-glow), 0 0 92px var(--secondary-glow),
+					0 0 102px var(--secondary-glow), 0 0 151px var(--secondary-glow);
+			}
+
+			text-shadow: 0 0 0 var(--main-glow), 0 0 0 var(--main-glow),
+				0 0 0 var(--main-glow), 0 0 0 var(--secondary-glow),
+				0 0 0 var(--secondary-glow), 0 0 0 var(--secondary-glow),
+				0 0 0 var(--secondary-glow), 0 0 0 var(--secondary-glow);
+		}
+
+		border-radius: 50px;
 		flex: 1;
 		white-space: nowrap;
-		transition: cubic-bezier(0.17, 0.67, 0.11, 0.98) 0.3s;
+
 		font-family: var(--font-special);
 
-		&:hover {
-			box-shadow: rgba(0, 0, 0, 0.23) 0 2px 5px, var(--docs-btn-bg) 0 4px 0,
-				0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12),
-				0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12),
-				0 16px 16px rgba(0, 0, 0, 0.12);
-			transform: translateY(-2px);
-
-			opacity: 1;
-			span::before {
-				width: 100%;
-			}
-		}
-
 		&.repo {
-			border: 2px var(--docs-btn-bg) solid;
-			background-color: transparent;
-			color: var(--repo-btn-text);
-			span::before {
-				background-color: var(--repo-btn-text);
+			transition: background-color 0.2s;
+			background-image: none;
+			.inner-text {
+				border-color: var(--bewebdev-pink);
+				border-style: dashed;
+				transition: border-color 0.3s;
 			}
-		}
-
-		&:active {
-			box-shadow: 0 2px 4px rgb(45 35 66 / 40%),
-				0 7px 13px -3px rgb(45 35 66 / 30%),
-				inset 0 5px 5px rgba(23, 26, 44, 0.344);
-			transform: translateY(2px);
-		}
-		span {
-			position: relative;
-			&::before {
-				content: '';
-				position: absolute;
-				bottom: -4px;
-				left: 0;
-				width: 0%;
-				height: 4px;
-				border-radius: 2px;
-				background-color: var(--docs-btn-text);
-				transition: 0.2s;
+			&:hover,
+			&:focus {
+				background-color: var(--bewebdev-purple);
+				.inner-text {
+					border-color: var(--font-body);
+				}
 			}
 		}
 	}
