--- a/src/components/LandingPage/WelcomeSection/MainLinks.astro
+++ b/src/components/LandingPage/WelcomeSection/MainLinks.astro
@@ -7,6 +7,7 @@ import DocsBtn from '../DocsBtn.astro'
 		title='bewebdev.tech docs'
 		href='/introduction'
 		text='Start learning'
+		glow
 	/>
 	<DocsBtn
 		title='bewebdev.tech GitHub'
