Feat: add hiding polish links that match specific syntax when user is not from Poland

--- a/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
+++ b/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
@@ -71,7 +71,8 @@ const LATEST_VIDEO_COUNT = 2
 </section>
 
 <script>
-	import { getUserIsFromPoland } from './helpers'
+	import { getUserIsFromPoland } from '../../../utils/getUserIsFromPoland'
+
 	const isFromPoland = getUserIsFromPoland()
 
 	if (!isFromPoland) {
