Remove incorrect prop from HidePolishLinks astro component

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -236,6 +236,6 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 		<Footer path={currentFile} />
 		<CopyCodeToClipboard />
 		<HeadingLinksCopyToClipboard />
-		<HidePolishLinks client:idle />
+		<HidePolishLinks />
 	</body>
 </html>
