--- a/src/components/utility/HeadingLinksCopyToClipboard/HeadingLinksCopyToClipboard.astro
+++ b/src/components/utility/HeadingLinksCopyToClipboard/HeadingLinksCopyToClipboard.astro
@@ -15,10 +15,13 @@
 
 		button.heading-copy {
 			opacity: 0;
-			transition: opacity 0.2s ease-in-out;
 			cursor: pointer;
 			width: 42px;
 			height: 42px;
+
+			@media (prefers-reduced-motion: no-preference) {
+				transition: opacity 0.2s ease-in-out;
+			}
 		}
 		&:has(button:focus-visible) {
 			button.heading-copy {
