--- a/src/components/LandingPage/Comparison/ComparisonCard.astro
+++ b/src/components/LandingPage/Comparison/ComparisonCard.astro
@@ -18,7 +18,9 @@ const { name, downside, icon }: Props = Astro.props
 
 <style lang='scss'>
 	.side-by-side {
-		transition: opacity 1s translate 1s;
+		@media (prefers-reduced-motion: no-preference) {
+			transition: opacity 1s translate 1s;
+		}
 		display: flex;
 		justify-content: space-between;
 		gap: 1rem;
