--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -43,12 +43,12 @@ const currentPageMatch = currentPage.endsWith('/')
 </nav>
 
 <script is:inline>
-	window.addEventListener('DOMContentLoaded', () => {
-		var target = document.querySelector('[aria-current="page"]')
-		if (target && target.offsetTop > window.innerHeight - 100) {
-			document.querySelector('.nav-groups').scrollTop = target.offsetTop
-		}
-	})
+window.addEventListener('DOMContentLoaded', () => {
+	var target = document.querySelector('[aria-current="page"]')
+	if (target && target.offsetTop > window.innerHeight - 100) {
+		document.querySelector('.nav-groups').scrollTop = target.offsetTop
+	}
+})
 </script>
 
 <style>
@@ -104,17 +104,28 @@ const currentPageMatch = currentPage.endsWith('/')
 		color: inherit;
 		text-decoration: none;
 		display: block;
-		transition: 0.3s;
 		border-radius: 1rem;
 		width: calc(100% - 10px);
 		border: 1px solid var(--sidebar-item-hover);
 		text-align: center;
 	}
 
+	@media (prefers-reduced-motion: no-preference) {
+		.nav-link a {
+			transition: 0.3s;
+		}
+	}
+
 	.nav-link a:hover,
 	.nav-link a:focus {
-		transition: background-color 0.1s;
 		background-color: var(--sidebar-item-hover);
+	}
+
+	@media (prefers-reduced-motion: no-preference) {
+		.nav-link a:hover,
+		.nav-link a:focus {
+			transition: background-color 0.1s;
+		}
 	}
 
 	.nav-link a[aria-current='page'] {
