--- a/src/components/utility/CopyCodeToClipboard/CopyCodeToClipboard.astro
+++ b/src/components/utility/CopyCodeToClipboard/CopyCodeToClipboard.astro
@@ -9,20 +9,26 @@
 	}
 
 	.copy-button {
-		transition: background-color 0.5s, color 0.5s;
 		cursor: pointer;
 		padding: 0.8rem 1.8rem;
 		font-weight: bold;
 		width: 120px;
 		text-align: center;
 		display: block;
+
+		@media (prefers-reduced-motion: no-preference) {
+			transition: background-color 0.5s, color 0.5s;
+		}
 	}
 
 	.success {
-		transition: background-color 0.2s, color 0.2s;
 		background-color: var(--theme-text-accent);
 		color: var(--theme-bg);
-		animation: button-success 0.5s ease-in-out;
+
+		@media (prefers-reduced-motion: no-preference) {
+			transition: background-color 0.2s, color 0.2s;
+			animation: button-success 0.5s ease-in-out;
+		}
 	}
 
 	@keyframes button-success {
