refactor(LeftSidebar.astro): replace var with const in script

--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -44,7 +44,7 @@ const currentPageMatch = currentPage.endsWith('/')
 
 <script is:inline>
 window.addEventListener('DOMContentLoaded', () => {
-	var target = document.querySelector('[aria-current="page"]')
+	const target = document.querySelector('[aria-current="page"]')
 	if (target && target.offsetTop > window.innerHeight - 100) {
 		document.querySelector('.nav-groups').scrollTop = target.offsetTop
 	}
