--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -60,6 +60,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 	header {
 		z-index: var(--overlay-high);
 		height: var(--theme-navbar-height);
+		margin-bottom: calc(var(--theme-navbar-height) * -1);
 		width: 100%;
 		background-color: var(--theme-navbar-bg);
 		display: flex;
@@ -68,7 +69,6 @@ const algoliaIsSetUp = indexName && appId && apiKey
 		overflow: hidden;
 		position: sticky;
 		top: 0;
-		height: fit-content;
 		padding: 12px 0;
 	}
 
@@ -128,7 +128,6 @@ const algoliaIsSetUp = indexName && appId && apiKey
 	@media (min-width: 50em) {
 		header {
 			padding: 2rem 0rem;
-			margin-bottom: -100px;
 		}
 
 		.logo {
