--- a/src/components/LandingPage/WelcomeSection/MainLinks.astro
+++ b/src/components/LandingPage/WelcomeSection/MainLinks.astro
@@ -23,9 +23,13 @@ import DocsBtn from '../DocsBtn.astro'
 		margin-top: 2rem;
 		display: flex;
 		align-items: center;
-		gap: 1rem;
+		gap: 0.3rem;
 		flex-wrap: wrap;
 		width: 100%;
+
+		@media (min-width: 1000px) {
+			gap: 1rem;
+		}
 	}
 
 	.links a {
