--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -70,6 +70,12 @@ const algoliaIsSetUp = indexName && appId && apiKey
 		position: sticky;
 		top: 0;
 		padding: 12px 0;
+
+		@supports (backdrop-filter: blur(5px)) {
+			background-color: rgba(255, 255, 255, 0);
+			backdrop-filter: blur(5px);
+			-webkit-backdrop-filter: blur(5px);
+		}
 	}
 
 	.logo {
