--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -109,9 +109,8 @@
 
 	--sidebar-bg: hsl(214, 35%, 13%);
 	--sidebar-item-hover: hsl(0, 0%, 80%);
-	--sidebar-item-active: hsl(0, 0%, 95%);
-	--sidebar-item-active-shadow: inset rgba(0, 0, 0, 0.494) 0 0 0 1px,
-		rgba(0, 0, 0, 0.1) 0 4px 12px;
+	--sidebar-item-active: hsl(0, 0%, 100%);
+	--sidebar-item-active-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 body {
@@ -175,10 +174,9 @@ body {
 	/* Docs sidebar */
 	--sidebar-bg: hsl(214, 35%, 13%);
 	--sidebar-item-hover: hsl(214, 35%, 18%);
-	--sidebar-item-active: hsl(214, 25%, 33%);
+	--sidebar-item-active: hsl(214, 45%, 23%);
 	--sidebar-item-active-text: white;
-	--sidebar-item-active-shadow: inset 0 0 0 1px white,
-		0 5px 15px rgba(0, 0, 0, 0.35);
+	--sidebar-item-active-shadow: 0 5px 15px rgba(0, 0, 0, 35%);
 }
 
 :root.theme-oled {
