Add link to video section on landing page

--- a/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
+++ b/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
@@ -5,7 +5,8 @@ const YOUTUBE_CHANNEL_ID = 'UUww1wSWy6LvZjyEEHr7ypLA'
 
 const LATEST_VIDEO_COUNT = 2
 
-const CHANNEL_SUBSCRIBE_LINK = ''
+const CHANNEL_SUBSCRIBE_LINK =
+	'https://www.youtube.com/@bewebdev?sub_confirmation=1'
 ---
 
 <style lang='scss'>
