Add youtube channel to footer

--- a/src/components/Footer/FooterCommonLinksList.astro
+++ b/src/components/Footer/FooterCommonLinksList.astro
@@ -21,6 +21,11 @@ const footerLinks: FooterLink[] = [
 		href: 'https://github.com/NowYouKnowProgramming/webdev-learning-materials/graphs/contributors',
 		title: 'All contributors of bewebdev.tech on GitHub',
 	},
+	{
+		name: 'YouTube channel',
+		href: 'https://www.youtube.com/@bewebdev?sub_confirmation=1',
+		title: 'YouTube channel of bewebdev.tech',
+	},
 ]
 ---
 
