--- a/src/components/LandingPage/LandingPageEndingCTA.astro
+++ b/src/components/LandingPage/LandingPageEndingCTA.astro
@@ -6,7 +6,7 @@ import DocsBtn from './DocsBtn.astro'
 	<div class='text'>
 		<h2>Are you ready to learn?</h2>
 		<div class='btn-wrapper'>
-			<DocsBtn glow title='Docs page' href='/introduction' text='Get Started' />
+			<DocsBtn glow title='Docs page' href='/introduction'>Get Started</DocsBtn>
 		</div>
 	</div>
 	<div class='bottom-grad' aria-hidden='true'></div>
