--- a/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
+++ b/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
@@ -64,12 +64,13 @@ const CHANNEL_SUBSCRIBE_LINK =
 		new ways to write code for both parties - code reviewer and code writer
 	</p>
 	<DocsBtn
-		text='Visit our channel'
 		title='Bewebdev on youtube'
 		href={CHANNEL_SUBSCRIBE_LINK}
 		isExternal
 		classes='repo'
-	/>
+	>
+		Visit our channel
+	</DocsBtn>
 	<div class='videos-wrapper'>
 		{
 			Array.from({ length: LATEST_VIDEO_COUNT }).map((_, index) => {
