--- a/src/components/LandingPage/WelcomeSection/MainLinks.astro
+++ b/src/components/LandingPage/WelcomeSection/MainLinks.astro
@@ -3,19 +3,17 @@ import DocsBtn from '../DocsBtn.astro'
 ---
 
 <div class='links'>
-	<DocsBtn
-		title='bewebdev.tech docs'
-		href='/introduction'
-		text='Start learning'
-		glow
-	/>
+	<DocsBtn title='bewebdev.tech docs' href='/introduction' glow>
+		Start learning
+	</DocsBtn>
 	<DocsBtn
 		title='bewebdev.tech GitHub'
 		href='https://github.com/NowYouKnowProgramming/webdev-learning-materials'
-		text='Source Code'
 		isExternal
 		classes='repo'
-	/>
+	>
+		Source Code
+	</DocsBtn>
 </div>
 
 <style>
