--- a/src/components/LandingPage/DocsBtn.astro
+++ b/src/components/LandingPage/DocsBtn.astro
@@ -52,8 +52,9 @@ const css = `docs-btn ${glow ? 'glow' : ''} ${classes ? classes : ''}`
 	}
 
 	.docs-btn {
-		display: grid;
-		place-items: center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		padding: 0.3rem;
 		font-size: 1.3rem;
 		color: var(--font-body);
